Json schema (#87)
Various performance improvements, new unique value logic, update netty and jsonsmart libs

* Fix bug when parsing YAML real-time nested fields not carrying over correct options

* Fix bug with parsing messageHeaders from YAML

* Add in support for JSON schema, can use include/exclude fields

* Update build and changelog

* Clean up JSON schema converter