@@ -21,7 +21,7 @@ plugins {
     signing
 
     id("org.scoverage") version "8.0.3"
-    id("com.github.johnrengelman.shadow") version "8.1.1"
+    id("com.gradleup.shadow") version "8.3.6"
 }
 
 repositories {
@@ -56,19 +56,31 @@ testing {
     suites {
         // Configure the built-in test suite
         val test by getting(JvmTestSuite::class) {
-            // Use JUnit4 test framework
-            useJUnit("4.13.2")
-
             dependencies {
                 // Use Scalatest for testing our library
-                implementation("org.scalatest:scalatest_$scalaVersion:3.2.10")
-                implementation("org.scalatestplus:junit-4-13_$scalaVersion:3.2.2.0")
+                implementation("org.scalatest:scalatest_$scalaVersion:3.2.19")
+                implementation("org.scalatestplus:junit-5-11_$scalaVersion:3.2.19.0")
                 implementation("org.scalamock:scalamock_$scalaVersion:5.2.0")
 
                 // Need scala-xml at test runtime
                 runtimeOnly("org.scala-lang.modules:scala-xml_$scalaVersion:1.3.1")
             }
         }
+    }
+}
+
+tasks.test {
+    jvmArgs("-Djava.security.manager=allow", "-Djdk.module.illegalAccess=deny", "--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED", "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED", "--add-opens=java.base/java.io=ALL-UNNAMED", "--add-opens=java.base/java.net=ALL-UNNAMED", "--add-opens=java.base/java.nio=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED", "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED", "--add-opens=java.base/sun.security.action=ALL-UNNAMED", "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED", "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED")
+    finalizedBy(tasks.reportScoverage)
+    useJUnitPlatform {
+        includeEngines("scalatest")
+        testLogging {
+            events("failed")
+        }
+    }
+    // Enable proper test filtering
+    filter {
+        setFailOnNoMatchingTests(false)
     }
 }
 
@@ -111,10 +123,6 @@ tasks.shadowJar {
     archiveVersion.set(project.version.toString())
     archiveClassifier.set("")
     isZip64 = true
-}
-
-tasks.test {
-    finalizedBy(tasks.reportScoverage)
 }
 
 configure<ScoverageExtension> {
@@ -173,3 +181,4 @@ signing {
     useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
     sign(publishing.publications["mavenScala"])
 }
+
